WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
87163
Crash when a plug-in view outlives its containing WebPage
https://bugs.webkit.org/show_bug.cgi?id=87163
Summary
Crash when a plug-in view outlives its containing WebPage
Anders Carlsson
Reported
2012-05-22 13:57:33 PDT
Crash when a plug-in view outlives its containing WebPage
Attachments
Patch
(6.13 KB, patch)
2012-05-22 14:02 PDT
,
Anders Carlsson
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2012-05-22 14:02:32 PDT
Created
attachment 143357
[details]
Patch
mitz
Comment 2
2012-05-22 14:41:44 PDT
Comment on
attachment 143357
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=143357&action=review
> Source/WebKit2/WebProcess/WebPage/WebPage.h:711 > + // All plug-in views on this web page.
WebPage? webpage?
Anders Carlsson
Comment 3
2012-05-22 14:55:47 PDT
Committed
r118060
: <
http://trac.webkit.org/changeset/118060
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug