third_party/WebKit/Source/WebKit2/WebProcess/Plugins/PluginView.h
@@ -74,6 +74,7 @@ public:
     WebCore::RenderBoxModelObject* renderer() const;
 
     void pageScaleFactorDidChange();
+    void webPageDestroyed();
 
 private:
     PluginView(PassRefPtr<WebCore::HTMLPlugInElement>, PassRefPtr<Plugin>, const Plugin::Parameters& parameters);
